# nix-diode

./: .gitignore  flake.nix
host/: common.nix  configuration.nix  fwd-vm.nix  network-compartment.nix  vfio-takeover.nix  vm-service.nix
host/big-edge/: configuration.nix  hardware-configuration.nix
host/squeakbox/: configuration.nix  hardware-configuration.nix
pkt_fwd/: Cargo.toml
pkt_fwd/src/: main.rs
