[package]
name = "pkt_fwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", optional = false, features = [ "std", "derive"] }
tokio-vsock = "0.3.1"
tokio = { version = "1.16.1", features = ["full"] }
log = "0.4.14"
stderrlog = "0.5.1"
